--- a/themes/twentyseventeen-child/templates/mixins.twig
+++ b/themes/twentyseventeen-child/templates/mixins.twig
@@ -37,7 +37,7 @@
 
 {% endmacro %}
 
-{# Add cover background image with given opacity #}
+{# Macro for post block #}
 {% macro postBlock(data) %}
 
     {# Allow use of mixins in mixin #}
